new changes lamide
new changes made to about page, search, our strength, etc.

--- a/index.html
+++ b/index.html
@@ -548,22 +548,130 @@ TOP BAR SECTION
 </section>
 
 
-<!-- about us -->
-<div class="aboutUsContainer">
-  <div class="aboutImg">
-      <!-- <h2>Our Stories <hr> </h2> -->
-       <img src="assets/Logo 6.png">
-      <h1>We Put Sweetness <br>  Into Your Mouth</h1>
-      <h3>We dont just make food. We make People's experience. We were built on the  belief  <br> that food should 
-          be special, and we carry thebelief into every taste we   make.
-      </h3>
-      <button class="cn"><a href="#">ORDER NOW</a></button>
+<!-- special offer -->
+<div class="specialOffer">
+        
+  <div class="specialOfferText">
+      <h1>OUR SPECIAL OFFER</h1>
   </div>
+
+  <div class="discountList discount">
+      <div class="discountPercent">
+          <img src="Assets/discountIcon.png"><h3>10% off</h3>
+      </div>
+      <h2>Jumbo Special (Rice + Big chicken + Drink)</h2>
+      <p> Smokey jollof or fried rice or a mix of both with a big chicken and a PET drink or water.</p>
+      <h5>#5,500</h5>
+      <h6>#4,500</h6>
+      <button class="special-offer-btn">View More</button>
+      </button>
+      <div class="specialOfferImg">
+        <img src="/assets/rice.jpg" alt="specialoffer1">
+      </div>  
+  </div>
+
+  <div class="discountList discount">
+    <div class="discountPercent">
+        <img src="Assets/discountIcon.png"><h3>10% off</h3>
+    </div>
+    <h2>Jumbo Special (Rice + Big chicken + Drink)</h2>
+    <p> Smokey jollof or fried rice or a mix of both with a big chicken and a PET drink or water.</p>
+    <h5>#5,500</h5>
+    <h6>#4,500</h6>
+    <button class="special-offer-btn">View More</button>
+    </button>
+    <div class="specialOfferImg">
+      <img src="/assets/rice2.jpg" alt="specialoffer2">
+    </div>  
 </div>
+
+<div class="discountList discount">
+  <div class="discountPercent">
+      <img src="Assets/discountIcon.png"><h3>10% off</h3>
+  </div>
+  <h2>Jumbo Special (Rice + Big chicken + Drink)</h2>
+  <p> Smokey jollof or fried rice or a mix of both with a big chicken and a PET drink or water.</p>
+  <h5>#5,500</h5>
+  <h6>#4,500</h6>
+  <button class="special-offer-btn">View More</button>
+  </button>
+  <div class="specialOfferImg">
+    <img src="/assets/rice3.jpg" alt="specialoffer3">
+  </div>  
+</div>
+
+<div class="discountList discount">
+  <div class="discountPercent">
+      <img src="Assets/discountIcon.png"><h3>10% off</h3>
+  </div>
+  <h2>Jumbo Special (Rice + Big chicken + Drink)</h2>
+  <p> Smokey jollof or fried rice or a mix of both with a big chicken and a PET drink or water.</p>
+  <h5>#5,500</h5>
+  <h6>#4,500</h6>
+  <button class="special-offer-btn">View More</button>
+  </button>
+  <div class="specialOfferImg">
+    <img src="/assets/fried rice 2.jpg" alt="specialoffer4">
+  </div>  
+</div>
+
+<div class="discountList discount">
+  <div class="discountPercent">
+      <img src="Assets/discountIcon.png"><h3>10% off</h3>
+  </div>
+  <h2>Jumbo Special (Rice + Big chicken + Drink)</h2>
+  <p> Smokey jollof or fried rice or a mix of both with a big chicken and a PET drink or water.</p>
+  <h5>#5,500</h5>
+  <h6>#4,500</h6>
+  <button class="special-offer-btn">View More</button>
+  </button>
+  <div class="specialOfferImg">
+    <img src="/assets/fried rice.jpg" alt="specialoffer5">
+  </div>  
+</div>
+
+<div class="discountList discount">
+  <div class="discountPercent">
+      <img src="Assets/discountIcon.png"><h3>10% off</h3>
+  </div>
+  <h2>Jumbo Special (Rice + Big chicken + Drink)</h2>
+  <p> Smokey jollof or fried rice or a mix of both with a big chicken and a PET drink or water.</p>
+  <h5>#5,500</h5>
+  <h6>#4,500</h6>
+  <button class="special-offer-btn">View More</button>
+  </button>
+  <div class="specialOfferImg">
+    <img src="/assets/chinese rice.jpg" alt="specialoffer6">
+  </div>  
+</div>
+
+</div>
+
+
+<!-- about us -->
+
+<section class="about-section">
+  <div class="about-container">
+      <div class="about-content">
+          <div class="about-text">
+              <h2>About Us</h2>
+              <p>Welcome to TRAO Kitchens, where our suiting your taste buds is out priority. Our mission is Delight Every Palate.</p>
+              <p>Founded in 2024, we have been known for our efforts to leave our customers satisfied and wishing for more. Our team consists of dedicated professionals who strives to make everything nice.</p>
+              <p>At our establishment, we uphold a steadfast commitment to excellence by meticulously sourcing all ingredients from local producers. This unwavering dedication guarantees that each component of our dishes boasts exceptional quality and unmatched freshness. By supporting our local community, we not only prioritize sustainability but also ensure that every ingredient meets our stringent standards, resulting in a dining experience that is both exceptional and memorable.</p>
+              <p>Feel free to Book us today. We look forward to giving you the satisfaction you desire.</p>
+          </div>
+          <div class="about-image">
+              <img src="/assets/about-banner.jpg" alt="about-us-page">
+          </div>
+      </div>
+  </div>
+</section>
+
+<hr>
 
 <!-- OUR STRENGTH -->
 <div class="ourStrength">
-  <img class="logo8" src="assets/Logo7.png">
+  
   <h1>Our Strength</h1>
   
 <div class="our-strength-grid">
