--- a/Hackhaton-Dev21-Main/index.html
+++ b/Hackhaton-Dev21-Main/index.html
@@ -628,6 +628,31 @@ TOP BAR SECTION
   </div>
 </section>
 
+<!-- How it works -->
+<section class="work-wrapper">
+<div class="header-wrapper">
+  <h2>How it <span style="text-decoration:underline; color:#C57C15;">Works</span></h2>
+  <p>We understand the importance of good service, Our friendly team is to ensure you have a pleasant dinning experience from start to finish.</p>
+</div>
+<div class="card-wrapper">
+  <div class="card-one">
+    <img src="images/pick-meals-image.png" alt="">
+    <h3>Quality Assurance</h3>
+    <p>We uphold the highest standards of quality in every dish we serve, meticulously sourcing ingredients and maintaining strict hygiene protocols to guarantee a safe and enjoyable dining experience.</p>
+  </div>
+  <div class="card-one">
+    <img src="images/choose-image.png" alt="">
+    <h3>Customizable Orders</h3>
+    <p>Tailor your meal to your liking with our customizable options, allowing you to create a dining experience that suits your preferences perfectly resulting in a dining experience that is both exceptional and memorable.</p>
+  </div>
+  <div class="card-one">
+    <img src="images/delivery-image.png" alt="">
+    <h3>Good & Fast Deliveries</h3>
+    <p>We prioritize speedy deliveries,From kitchen to your table in record time, our commitment to swift service means you'll never have to wait long for your delicious meal to arrive.</p>
+  </div>
+</div>
+
+</section>
 
 
 <!-- Reservation -->
