--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
- <!-- <!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -81,7 +81,7 @@
 
   <script src="trial.js"></script>
 </body>
-</html>  -->
+</html> -->
 
 
 <!DOCTYPE html>
@@ -97,7 +97,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
   <title>Login/Sign Up Page</title>
-  <link rel="stylesheet" href="./trial.css">
+  <link rel="stylesheet" href="login.css">
 </head>
 <body>
  <div class="container">
@@ -161,6 +161,6 @@
     </div>
   </form>
  </div>
-  <script src="trial.js"></script>
+  <script src="login.js"></script>
 </body>
-</html> 
+</html>
